--- a/Seq2seqChatbot.ipynb
+++ b/Seq2seqChatbot.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "## Seq2seq Architecture\n",
     "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture <br><br>\n",
-    "<img src='Asset/Image Seq2seq Architecture.jpg' width = '700px'><br>\n",
+    "![alt text](/Asset/Example1.jpg 'WORKING')\n",
+    "<!-- <img url='../Asset/Image Seq2seq Architecture.jpg' width = '700px'><br> -->\n",
     "\n",
     "Base on it structure, seq2seq contain 2 parts named Encoder and Decoder. Encoder works to ENCODE the input sequence, the result of this ENCODED process is a context of input sequence. Next, This context of input sequence entered into Decoder. Then, Decoder will process this context to predicit the next word for a certain iteration.\n",
     "\n",
@@ -40,6 +41,11 @@
     "- Vanilla Gated Recurrent Unit\n",
     "- <a href=\"https://arxiv.org/abs/1508.04025\" >Luong Attention Mechanism</a> \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
