--- a/Seq2seqChatbot.ipynb
+++ b/Seq2seqChatbot.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Seq2seq Architecture\n",
     "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture <br><br>\n",
-    "![alt text](/Asset/Example1.jpg 'WORKING')\n",
+    "![](Asset/Seq2seqArchitecture.jpg)\n",
     "<!-- <img url='../Asset/Image Seq2seq Architecture.jpg' width = '700px'><br> -->\n",
     "\n",
     "Base on it structure, seq2seq contain 2 parts named Encoder and Decoder. Encoder works to ENCODE the input sequence, the result of this ENCODED process is a context of input sequence. Next, This context of input sequence entered into Decoder. Then, Decoder will process this context to predicit the next word for a certain iteration.\n",
