--- a/Seq2seqChatbot.ipynb
+++ b/Seq2seqChatbot.ipynb
@@ -19,14 +19,12 @@
     "## Sequence-to-sequence (Seq2seq) Explanation \n",
     "Base on it name, seq2seq works with sequence data (time series, sentence etc.) and trying to continue those sequence with another related sequence.\n",
     "\n",
-    "<img src='Asset/Example1.jpg' width = '700px'><br>\n",
-    "\n",
+    "![](Asset/Example1.jpg)\n",
     "As we can see, the input sentences \"I want to drink Water\" is consist of words and the seq2seq give an result of another collection of words in a sentences \"Because I am thirsty\"\n",
     "\n",
     "## Seq2seq Architecture\n",
     "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture <br><br>\n",
     "![](Asset/Seq2seqArchitecture.jpg)\n",
-    "<!-- <img url='../Asset/Image Seq2seq Architecture.jpg' width = '700px'><br> -->\n",
     "\n",
     "Base on it structure, seq2seq contain 2 parts named Encoder and Decoder. Encoder works to ENCODE the input sequence, the result of this ENCODED process is a context of input sequence. Next, This context of input sequence entered into Decoder. Then, Decoder will process this context to predicit the next word for a certain iteration.\n",
     "\n",
