--- a/Seq2seqChatbot.ipynb
+++ b/Seq2seqChatbot.ipynb
@@ -5,7 +5,6 @@
    "metadata": {},
    "source": [
     "# Sequence-to-sequence Chatbot \n",
-    "by MARVEL MANULLANG<br><br>\n",
     "A Simple Explanation about Sequence-to-sequence Chatbot Using GRU and Luong Attention Mechanism <br>\n",
     "\n",
     "\n",
@@ -19,13 +18,17 @@
     "## Sequence-to-sequence (Seq2seq) Explanation \n",
     "Base on it name, seq2seq works with sequence data (time series, sentence etc.) and trying to continue those sequence with another related sequence.\n",
     "\n",
-    "![](Asset/Example1.jpg)\n",
+    "<img src='Asset/Example1.jpg'>\n",
+    "<!-- ![](Asset/Example1.jpg) -->\n",
+    "\n",
     "As we can see, the input sentences \"I want to drink Water\" is consist of words and the seq2seq give an result of another collection of words in a sentences \"Because I am thirsty\"\n",
     "\n",
     "## Seq2seq Architecture\n",
-    "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture <br><br>\n",
-    "![](Asset/Seq2seqArchitecture.jpg)\n",
+    "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture\n",
     "\n",
+    "<img src='Asset/Seq2seqArchitecture.jpg'>\n",
+    "<!-- ![](Asset/Seq2seqArchitecture.jpg) -->\n",
+    " \n",
     "Base on it structure, seq2seq contain 2 parts named Encoder and Decoder. Encoder works to ENCODE the input sequence, the result of this ENCODED process is a context of input sequence. Next, This context of input sequence entered into Decoder. Then, Decoder will process this context to predicit the next word for a certain iteration.\n",
     "\n",
     "To make those process happend, each Encoder and Decoder contain set of neural network layer. Basically, we can customized each layer by on our own. For this tutorial we gonna use this layer formation:<br>\n",
