--- a/Seq2seqChatbot.ipynb
+++ b/Seq2seqChatbot.ipynb
@@ -5,24 +5,21 @@
    "metadata": {},
    "source": [
     "# Sequence-to-sequence Chatbot \n",
-    "A Simple Explanation about Sequence-to-sequence Chatbot Using GRU and Luong Attention Mechanism <br>\n",
-    "\n",
-    "\n",
-    "Before we dive into CODE, first we need to understand how this Sequence-to-sequence architecture and all of the component Works"
+    "This is A Simple Explanation about Sequence-to-sequence Chatbot Using GRU and Luong Attention Mechanism. Before we dive into CODE, first we need to understand how this Sequence-to-sequence architecture and all of the component Works"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequence-to-sequence (Seq2seq) Explanation \n",
+    "## 1. Sequence-to-sequence (seq2seq) Introduction\n",
     "Base on it name, seq2seq works with sequence data (time series, sentence etc.) and trying to continue those sequence with another related sequence.\n",
     "\n",
     "![](Asset/Example1.jpg)\n",
     "\n",
     "As we can see, the input sentences \"I want to drink Water\" is consist of words and the seq2seq give an result of another collection of words in a sentences \"Because I am thirsty\"\n",
     "\n",
-    "## Seq2seq Architecture\n",
+    "## 2. Seq2seq Architecture\n",
     "To make it easier to understand about how this seq2seq works, this is a seq2seq architecture\n",
     "\n",
     "<!-- <img src='/Asset/Seq2seqArchitecture.jpg'> -->\n",
